fix: animation mobile

--- a/css/components.css
+++ b/css/components.css
@@ -40,6 +40,7 @@
   border-radius: 10px;
   background: var(--color-bg);
   cursor: pointer;
+  color: var(--color-text);
 }
 
 .hamburger .close-icon {
